Fixed post creating input field vertical alignment and fixed word break on posts with a very long word

--- a/src/DevHive.Angular/src/app/components/feed/feed.component.css
+++ b/src/DevHive.Angular/src/app/components/feed/feed.component.css
@@ -77,6 +77,7 @@
 
 form {
   width: 100%;
+  height: 100%;
 }
 
 #top-bar {
@@ -102,6 +103,7 @@ form {
   flex: 1;
   font-size: inherit;
   width: 100%;
+  height: 100%;
   margin: 0 auto;
   box-sizing: border-box;
   border: 2px solid var(--bg-color);
