--- a/src/DevHive.Angular/src/app/components/post/post.component.css
+++ b/src/DevHive.Angular/src/app/components/post/post.component.css
@@ -47,6 +47,7 @@ hr {
 
 .message {
   margin: .3em 0;
+  word-break: break-all;
 }
 
 .timestamp {
